tests/errors/poisoning/cascade-binary.fn
---
Description: Undefined operands in a binary expression should not cascade beyond the resolution error
Expected: FN3204, FN3204
---

type Program
{
    fn Main -> i32
    {
        var a = undefined_a + undefined_b
        return 0
    }
}
